# Recruitment-Assistant

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  OPTIMIZATION_PLAN.md  README.md  TEST_DOWNLOAD_RESEARCH.md  alembic.ini  boss_chat_dom_diagnostic.json  pyproject.toml
.claude/: auto-exec.txt  settings.local.json
.codebuddy/: restart_streamlit.bat
.github/workflows/: ci.yml
app/: main.py
app/components/: bridges.py  layout.py  theme_preview.py
app/pages/: 01_dashboard.py  01_首页看板.py  02_candidates.py  02_候选人管理.py  03_jobs.py  03_岗位管理.py  04_exports.py  04_导出中心.py  05_login.py  (+10 more)
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
data/: ai_models.json  ai_models.json.example  theme_config.json
deploy/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: 01_project_guidelines_and_structure.md  02_database_schema.md  03_development_plan.md  04_development_log.md  V3.02_Release_Report.md  岗位JD摘取表.xlsx  架构升级规划.md  调试日志使用说明.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
recruitment_assistant/: __init__.py  version.py
scripts/: analyze_test_run.py  audit_resume_db.py  backfill_candidate_from_filename.py  boss_login.py  capture_zhilian_manual_pages.py  capture_zhilian_page.py  check_boss_login.py  check_zhilian_login.py  deploy_env_template.sh  deploy_server.sh  diagnose_boss_cdp.py  diagnose_boss_chat_dom.py  diagnose_boss_popup.js  docker-entrypoint.sh  download_boss_chat_resumes.py  download_zhilian_chat_resumes.py  init_db.py  install_book_skills.py  install_playwright.py  migrate_positions_to_pg.py  migrate_resume_db.py  parse_pdf_resumes.py  run_streamlit.py  swr-login.sh  test_parse_one.py  verify-public-route.sh  vue_probe.js  zhilian_login.py
tests/: conftest.py  test_ai_usage_hook.py  test_alembic_bootstrap.py  test_analyze_test_run.py  test_api_rbac.py  test_auth.py  test_cdp_browser.py  test_crawl_hub.py  test_crawl_ingest.py  test_crawl_tenancy.py  test_crawl_ws.py  test_endpoint_chain.py  test_failover.py  test_pg_to_sqlite_migration.py  test_phase1_optimization.py  test_phase2_optimization.py  test_phase3_optimization.py  test_tenancy.py  test_test_run_watchdog.py
(+109 files in other folders)
